<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/options_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OptionsActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_preparation_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/option_preparation_time"
        app:helperText="@string/helper_text_preparation_time"
        app:helperTextTextColor="@color/grey"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_preparation_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_light"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_work_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/option_work_time"
        app:helperText="@string/helper_text_work_time"
        app:helperTextTextColor="@color/grey"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_preparation_time" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_work_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_light"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_rest_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/option_rest_time"
        app:helperText="@string/helper_text_rest_time"
        app:helperTextTextColor="@color/grey"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_work_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_rest_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_light"
            android:inputType="number"
            android:maxLength="4"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_sets_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/number_of_sets"
        app:helperText="@string/helper_text_sets_number"
        app:helperTextTextColor="@color/grey"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_rest_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_sets_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_light"
            android:inputType="number"
            android:maxLength="2"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/options_ok_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/options_back_button"
        app:layout_constraintTop_toBottomOf="@id/input_sets_number"
        android:text="@string/save_button"
        android:backgroundTint="@color/main_app_color"/>

    <Button
        android:id="@+id/options_back_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/options_ok_button"
        app:layout_constraintTop_toBottomOf="@id/input_sets_number"
        android:text="@string/back_button"
        android:backgroundTint="@color/main_app_color"/>

    <!--<TextView
        android:id="@+id/test_text_view1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/default_text"
        android:layout_marginTop="55dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/options_ok_button"/>

    <TextView
        android:id="@+id/test_text_view2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/default_text"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_text_view1"/>

    <TextView
        android:id="@+id/test_text_view3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/default_text"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_text_view2"/>

    <TextView
        android:id="@+id/test_text_view4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/default_text"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_text_view3"/>-->

    <TextView
        android:id="@+id/test_text_view6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/total_time"
        android:fontFamily="@font/lato_light"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/total_workout_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_workout_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text"
        android:fontFamily="@font/lato_light"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>