<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.ui.SettingsFragment"
    >

    <ImageButton
        android:id="@+id/back_button"
        style="@style/AnyScreenBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_title"
        style="@style/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <TextView
        android:id="@+id/dark_theme_settings"
        style="@style/SettingsTextItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/language_settings"
        style="@style/SettingsTextItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@+id/dark_theme_settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_theme_switcher"
        style="@style/SettingsSwitchers"
        android:theme="@style/Material3CustomTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:pointerIcon="arrow"
        app:layout_constraintBottom_toBottomOf="@+id/dark_theme_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dark_theme_settings" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/language_chip_group"
        style="@style/LanguageChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/language_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/language_settings">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_english"
            style="@style/LanguageChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_russian"
            style="@style/LanguageChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>