<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.ListFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        android:paddingEnd="10dp"
        app:checkedChip="@id/chip_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/Chips"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_easy"
            style="@style/Chips"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_easy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium"
            style="@style/Chips"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_medium" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hard"
            style="@style/Chips"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_hard" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/layout_animation"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>