<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ListActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:checkedChip="@id/chip_all"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_all"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_easy"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_easy"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_medium"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hard"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/chip_hard"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>