<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Timer"
    tools:context=".presentation.timer.ui.TimerFragment">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/AnyScreenBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        style="@style/TimerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:layout_constraintBottom_toTopOf="@id/local_timer_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/local_timer_view"
        style="@style/LocalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/general_timer_view"
        style="@style/GlobalTimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_time_title"
        style="@style/TotalTimeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/general_timer_view"
        app:layout_constraintBottom_toBottomOf="@+id/general_timer_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/general_timer_view" />

    <Button
        android:id="@+id/start_button"
        style="@style/GeneralBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="@+id/local_timer_view"
        app:layout_constraintStart_toStartOf="@+id/local_timer_view"
        app:layout_constraintTop_toBottomOf="@id/local_timer_view" />

    <Button
        android:id="@+id/pause_button"
        style="@style/GeneralBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/local_timer_view"
        app:layout_constraintStart_toStartOf="@+id/local_timer_view"
        app:layout_constraintTop_toBottomOf="@id/local_timer_view" />

    <Button
        android:id="@+id/restart_button"
        style="@style/RestartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/local_timer_view"
        app:layout_constraintStart_toStartOf="@+id/local_timer_view"
        app:layout_constraintTop_toBottomOf="@id/local_timer_view" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/global_progress_indicator"
        style="@style/TimerProgressBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/progress_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_timer_view" />


</androidx.constraintlayout.widget.ConstraintLayout>